--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+aranym (1.1.0-2) unstable; urgency=medium
+
+  * Add patch to use pow10() only when it's available
+
+ -- John Paul Adrian Glaubitz <glaubitz@physik.fu-berlin.de>  Sun, 31 Jan 2021 15:27:46 +0100
+
 aranym (1.1.0-1) unstable; urgency=medium
 
   * New upstream release
